--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
-<input type="text"
-       class="form-control"
-       [(ngModel)]="username">
-<p>Your username: {{ username }}</p>
-<button class="btn btn-primary"
-  [disabled]="!username"
-  (click)="onResetUsername()">Reset username</button>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <label>Username</label>
+      <input type="text"
+             class="form-control"
+             [(ngModel)]="username">
+      <p>Your username: {{ username }}</p>
+      <button class="btn btn-primary"
+              [disabled]="!username"
+              (click)="onResetUsername()">Reset username</button>
+    </div>
+  </div>
+</div>
